# beat-singer-quest

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-on-push.yml
scripts/: builder.py  install_deps.py  packer.py  requirements.txt
src/: main.cpp
src/bs/: lyrics_loader.cpp  lyrics_loader.h  lyrics_parser.cpp  lyrics_parser.h  lyrics_spawner.cpp  lyrics_spawner.h  mod_info.h
src/bs/utils/: config.cpp  config.h  hook_utils.h  logger.cpp  logger.h  lyrics.h  rcmp.cpp  scope_value.h  strings.cpp  strings.h
